Added campaign performance scatterplots
- month to date
- last 30 days
- last 60 days
- last 90 days

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,18 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+
+# Renviron for storing API keys and login data
+.Renviron
+.Renviron~
+.Renviron#
+
+# Emacs temp buffer files
+*.Rmd#
+*.Rmd~
+
+#Google auth
+.google.auth.RData
+
+#Ignore figures directory
+figure/
